Version 1.0.23 (Build 2022100900)
- added localposturl support for using moodle server as proxy for cloud poodll (only for very special cases)

Version 1.0.22 (Build 2022100700)
- removed unneeded lang strings

Version 1.0.21 (Build 2022072100)
- Fixed issue introduced in 1.0.20 if cron successfully retrieved the auto transcript before the self transcript was complete.

Version 1.0.20 (Build 2022071100)
- Fixed an issue that caused an error if the student did not enter a transcript (ie submitted an empty string)

Version 1.0.19 (Build 2022061001)
- Added different activity sequences ( ... that's big)
- Added non-English suggestions and AJAX suggestions
- added TTS / Suggestions / Gallery settings (not implemented)

Version 1.0.18 (Build 2022060500)
- fixed broken delete attempt
- added defaults to vide start and view end
- added a better free trial link and rebuild js for < M3.8

Version 1.0.39(Build 2022041800)
- Removed JQuery UI which was breaking Moodle 4.0 dock
- Fixed issue with activity being closed if open date set, but close data not set

1.0.17 (Build 2022032000)
- fixed issue in get_course_moduleinfo that could kill backup and restore
- tweaked polly stuff
- added modelmedia to back up and restore

1.0.16 (Build 2022021400)
- added suggested grammar corrections

1.0.15 (Build 2022020500)
- added model answer and ytclip
-  Added open and close dates

1.0.14 (Build 2022011700)
- added ajax forms instead of mforms

1.0.13 (Build 2021122200)
- added credential fetching

1.0.12 (Build 2021111000)
- Made self-transcript required

1.0.10 (Build 2021081600)
- fixed rubric grading

1.0.10 (Build 2021081600)
- fixed issue with array_key_exists on php 8
- fixed some bad instructions and missing description text

1.0.9 (Build 2021061400)
- Fixed issue with Group grading
- Added view attempt button to grades page
- Added options to how many students to show on grading page

1.0.8 (Build 2021053100)
- Internal flag for iframe use

1.0.7 (Build 2021053500)