@@ -43,6 +43,7 @@ class external extends external_api {
 
         $siteconfig = get_config(constants::M_COMPONENT);
         $token = utils::fetch_token($siteconfig->apiuser, $siteconfig->apisecret);
+
         $suggestions = utils::fetch_grammar_correction($token,$mod->region,$mod->ttslanguage,$text);
         if($suggestions==$text || empty($suggestions)){
             return "";
