@@ -122,6 +122,8 @@
         <FIELD NAME="autospellscore" TYPE="int" LENGTH="10" NOTNULL="true" SEQUENCE="false"/>
         <FIELD NAME="autospellerrors" TYPE="int" LENGTH="10" NOTNULL="true" SEQUENCE="false"/>
         <FIELD NAME="autospell" TYPE="text" NOTNULL="false" SEQUENCE="false"/>
+        <FIELD NAME="cefrlevel" TYPE="text" NOTNULL="false" SEQUENCE="false" COMMENT="The CEFR level"/>
+        <FIELD NAME="ideacount" TYPE="int" LENGTH="4" NOTNULL="false" SEQUENCE="false" COMMENT="The number of ideas"/>
         <FIELD NAME="timemodified" TYPE="int" LENGTH="10" NOTNULL="false" DEFAULT="0" SEQUENCE="false"/>
         <FIELD NAME="createdby" TYPE="int" LENGTH="10" NOTNULL="false" SEQUENCE="false"/>
         <FIELD NAME="modifiedby" TYPE="int" LENGTH="10" NOTNULL="false" SEQUENCE="false"/>
